Im Kern alles neu Noch nicht fertig: Sort, Duplicates, und Fancy Statusleiste

--- a/etc/frame.html
+++ b/etc/frame.html
@@ -63,8 +63,9 @@
 </iframe>
 <!-- <img src="http://status.cccmz.de/static/data/intern/energie-day.png" /> -->
 <div id="flash">
-    <p><big>Flash&trade;</big></p>
-    <p>&ldquo;Savior of the Universe&rdquo;</p>
+    <p>Ein Projekt des</p>
+    <p><big>Chaos Computer Club</big></p>
+    <p>Mainz/Wiesbaden</p>
 </div>
 
 </body>
