--- a/etc/frame.html
+++ b/etc/frame.html
@@ -52,7 +52,7 @@
         }
     </style>
     <script type="text/javascript">
-        var timeout = 100000;
+        var timeout = 2300000;
         window.onload=setTimeout('window.location.reload();', timeout);
     </script>
 </head>
