Bilder richtig rum sortieren..

--- a/etc/frame.html
+++ b/etc/frame.html
@@ -6,11 +6,11 @@
     <style type="text/css">
         @font-face {
         font-family: 'SourceCodeProRegular';
-        src: url('http://localhost:5000/static/fonts/SourceCodePro-Regular-webfont.eot');
-        src: url('http://localhost:5000/static/fonts/SourceCodePro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-             url('http://localhost:5000/static/fonts/SourceCodePro-Regular-webfont.woff') format('woff'),
-             url('http://localhost:5000/static/fonts/SourceCodePro-Regular-webfont.ttf') format('truetype'),
-             url('http://localhost:5000/static/fonts/SourceCodePro-Regular-webfont.svg#SourceCodeProRegular') format('svg');
+        src: url('http://localhost/static/fonts/SourceCodePro-Regular-webfont.eot');
+        src: url('http://localhost/static/fonts/SourceCodePro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+             url('http://localhost/static/fonts/SourceCodePro-Regular-webfont.woff') format('woff'),
+             url('http://localhost/static/fonts/SourceCodePro-Regular-webfont.ttf') format('truetype'),
+             url('http://localhost/static/fonts/SourceCodePro-Regular-webfont.svg#SourceCodeProRegular') format('svg');
         font-weight: normal;
         font-style: normal;
         }
@@ -58,10 +58,10 @@
 </head>
 <body>
 
-<iframe src="http://localhost:5000/" name="fnordpad">
+<iframe src="http://localhost/" name="fnordpad">
   <p>kaputt</p>
 </iframe>
-<!-- <img src="http://status.cccmz.de/static/data/intern/energie-day.png" /> -->
+<!-- <img src="http://status.cccmz.de/static/data/public/sixfour-hour.png" /> -->
 <div id="flash">
     <p>Ein Projekt des</p>
     <p><big>Chaos Computer Club</big></p>
