umzug auf den pi vorbereiten

--- a/etc/frame.html
+++ b/etc/frame.html
@@ -61,9 +61,9 @@
 <iframe src="http://localhost/" name="fnordpad">
   <p>kaputt</p>
 </iframe>
-<!-- <img src="http://status.cccmz.de/static/data/public/traffic-week.png" /> -->
+<!-- <img src="http://status.cccmz.de/static/data/public/sixfour-hour.png" /> -->
 <div id="flash">
-    <p>Ein Projekt&trade; des</p>
+    <p>Ein Projekt des</p>
     <p><big>Chaos Computer Club</big></p>
     <p>Mainz/Wiesbaden</p>
 </div>
