i_default aus list_images ausschließen (fixed unsorted off by one bug) json values auf existenz prüfen bevor alles ungebremst an die Wand fährt format_human_readable gegen _fmt werte aus der json getauscht. soll doch der server rechnen. backup scripte

--- a/etc/frame.html
+++ b/etc/frame.html
@@ -16,6 +16,7 @@
         }
         body{
             background: #000000;
+            background-image: url('snow.gif');
             color: #ffffff;
             font-family: 'SourceCodeProRegular', 'Courier', 'Monaco', sans-serif;
             font-size: 12px;
