--- a/etc/frame.html
+++ b/etc/frame.html
@@ -62,7 +62,7 @@
 <iframe src="http://localhost/" name="fnordpad">
   <p>kaputt</p>
 </iframe>
-<!-- <img src="http://status.cccmz.de/static/data/public/sixfour-hour.png" /> -->
+<!-- <img "src="http://status.cccmz.de/static/data/public/traffic-week.png" /> -->
 <div id="flash">
     <p>Ein Projekt des</p>
     <p><big>Chaos Computer Club</big></p>
